--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -15,13 +15,18 @@
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
+       
         android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
           android:windowSoftInputMode="adjustPan">
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
+        
       </activity>
+      <activity
+  android:name="com.facebook.ads.InterstitialAdActivity"
+  />
       <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
     </application>
 
