--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.18.0",
     "form-data": "^2.3.3",
     "fs": "0.0.1-security",
+    "jwt-decode": "^2.2.0",
     "lodash.debounce": "^4.0.8",
     "moment": "^2.22.2",
     "native-base": "^2.8.1",
@@ -32,6 +33,7 @@
     "react-native-linear-gradient": "^2.4.2",
     "react-native-material-switch": "0.0.4",
     "react-native-spinkit": "^1.1.1",
+    "react-native-switch": "^1.5.0",
     "react-native-textinput-effects": "^0.4.2",
     "react-native-vector-icons": "^5.0.0",
     "react-navigation": "^2.14.2",
@@ -39,7 +41,7 @@
     "redux": "^4.0.0",
     "redux-persist": "^5.10.0",
     "redux-thunk": "^2.3.0",
-    "remote-redux-devtools": "^0.5.13"
+    "remote-redux-devtools-sp": "^0.5.13"
   },
   "devDependencies": {
     "babel-preset-react-native-stage-0": "^1.0.1",
