--- a/package.json
+++ b/package.json
@@ -31,7 +31,11 @@
     "react-native-image-base64": "^0.1.3",
     "react-native-image-picker": "^0.27.1",
     "react-native-linear-gradient": "^2.4.2",
+    "react-native-material-menu": "^0.4.2",
     "react-native-material-switch": "0.0.4",
+    "react-native-modal": "^7.0.2",
+    "react-native-multiple-select": "^0.4.4",
+    "react-native-select-multiple": "^1.2.0",
     "react-native-spinkit": "^1.1.1",
     "react-native-switch": "^1.5.0",
     "react-native-textinput-effects": "^0.4.2",
@@ -41,7 +45,8 @@
     "redux": "^4.0.0",
     "redux-persist": "^5.10.0",
     "redux-thunk": "^2.3.0",
-    "remote-redux-devtools-sp": "^0.5.13"
+    "remote-redux-devtools-sp": "^0.5.13",
+    "rn-sliding-up-panel": "^1.3.1"
   },
   "devDependencies": {
     "babel-preset-react-native-stage-0": "^1.0.1",
